[tool.poetry]
name = "easy-open-ai"
version = "0.1.7"
description = "This is my first real package."
authors = ["ani <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
openai = "^0.28.1"
tiktoken = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
