[tool.poetry]
name = "easy-open-ai"
version = "0.2.0"
description = "This is my first REAL package."
authors = ["ani <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
openai = "^0.28.1"
tiktoken = "^0.5.1"
pytest = "^7.4.3"
astor = "^0.8.1"

[tool.poetry.scripts]
docstring = "easy_open_ai.docstrings:main"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
